templates/styles.css
/* From https://www.w3schools.com/howto/howto_css_loader.asp */

.loading-symbol {
    border: 5px dotted #f3f3f3 !important;
    border-top: 5px dotted #3498db !important;
    border-radius: 50% !important;
    aspect-ratio: 1 !important;
    margin: auto !important;
    width: 50px !important;
    height: 50px !important;
    position: relative !important;
    left: None !important;
    top: None !important;
    animation: spin 1.5s ease-in-out infinite;
}

@keyframes spin {
  0% { transform: rotate(360deg); }
  100% { transform: rotate(0deg); }
}

.bk.input_section {
  width: 100% !important;
}

/* Testing custom css classes in bokeh objects */
.panel {
  border-radius: 10px;
  border: 1px solid #e6e6e6;
  padding: 0.5vw;
  margin: 0 0.5vw 1vw 0.5vw;
  min-width: 100px;
  min-height: 100px;
  box-sizing: border-box;
  flex-grow: 1;
  display: block;
}

.panel.first {
  margin-left: 0;
}

.panel.last {
  margin-right: 0;
}

section {
  margin: 0 auto;
  width: 95%;
}

.row {
  width: 100%;
  display: flex;
  align-items: stretch;
  /*
  display: table;
  border-collapse: separate;
  border-spacing: 10px;
  */
}

.main {
  flex-grow: 90;
}

.sidebar {
  flex-grow: 10;
  flex-direction: column;
  align-items: stretch;
  display: flex;
}

.hrule {
  width: 95% !important;
  height: 0 !important;
  border-top: 1px solid #cccccc !important;
}

input[type='file'] {
  width: 100% !important;
}

/* Text styling, fonts and font sizes for looking pretty */
/* TODO -- SET FONTS WITH bokeh model.text_font_size='10em'!!! */

.bk.section-title, .bk.bk-tab {
  font-size: 1.1vw !important;
  font-weight: bold;
}

h2 {
  font-size: 1.8vw;
  margin-block-end: 0.5em;
  margin-block-start: 0.5em;
}

body {
    font-family: 'Helvetica', 'Arial', sans-serif;
}

.sidebar-big p {
  font-size: 1.8vw !important;
  font-weight: bold;
}

.sidebar-container {
  display: flex !important;
  width: 100% !important;
  height: 100% !important;
  flex-direction: column !important;
  justify-content: space-around !important;
}

.center {
  margin: auto !important;
  position: relative !important;
  top: 0 !important;
  text-align: center !important;
}


/* Mobile / vertical tablet modes, stack sections */
@media (max-width: 900px) {
  .panel, .input_panels .panel, .panel.first, .panel.last, .instrument-menu, h2 {
    display: block;
    width: 90%;
    margin: 10px auto;
  }

  .row {
    flex-direction: column;
  }
}
/* Source panel starts to break at ~1080px, consider adding separate @media ??? */

